@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix broken 'curse' spell.
+Nicolas Weeger 2010-08-08
+
 Merge split lines in artifacts messages.
 Nicolas Weeger 2010-08-08
 
